rename export menu entries, make "With selected:" text on its on row

--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -338,12 +338,12 @@
     </select>
     <label for='categoryExportFormat'>{{ 'Select export format:'|trans }}</label>
     <select class='form-control col-md-4' id='categoryExportFormat' autocomplete='off'>
-      <option value='eln'>{{ 'Make an ELN'|trans }}</option>
-      <option value='zip'>{{ 'Make a ZIP'|trans }}</option>
-      <option value='csv'>{{ 'Make a CSV'|trans }}</option>
-      <option value='multipdf'>{{ 'Make a PDF'|trans }}</option>
-      <option value='qrpdf'>{{ 'Make QR codes PDF'|trans }}</option>
-      <option value='json'>{{ 'Make JSON'|trans }}</option>
+      <option value='eln'>{{ 'ELN Archive'|trans }}</option>
+      <option value='zip'>{{ 'ZIP Archive'|trans }}</option>
+      <option value='csv'>{{ 'CSV File'|trans }}</option>
+      <option value='multipdf'>{{ 'PDF File'|trans }}</option>
+      <option value='qrpdf'>{{ 'QR codes PDF'|trans }}</option>
+      <option value='json'>{{ 'JSON'|trans }}</option>
     </select>
 
 
@@ -361,12 +361,12 @@
     </select>
     <label for='userExportFormat'>{{ 'Select export format:'|trans }}</label>
     <select class='form-control col-md-4' id='userExportFormat' autocomplete='off'>
-      <option value='eln'>{{ 'Make an ELN'|trans }}</option>
-      <option value='zip'>{{ 'Make Zip'|trans }}</option>
-      <option value='csv'>{{ 'Make Csv'|trans }}</option>
-      <option value='multipdf'>{{ 'Make PDF'|trans }}</option>
-      <option value='qrpdf'>{{ 'Make QR codes PDF'|trans }}</option>
-      <option value='json'>{{ 'Make JSON'|trans }}</option>
+      <option value='eln'>{{ 'ELN Archive'|trans }}</option>
+      <option value='zip'>{{ 'ZIP Archive'|trans }}</option>
+      <option value='csv'>{{ 'CSV File'|trans }}</option>
+      <option value='multipdf'>{{ 'PDF File'|trans }}</option>
+      <option value='qrpdf'>{{ 'QR codes PDF'|trans }}</option>
+      <option value='json'>{{ 'JSON'|trans }}</option>
     </select>
 
 
