add uploads layout toggle button
rework the compact uploads layout, remove option from ucp and directly
save it from view/edit mode

add flag to toggle "Saved" notifications on apiv2 class
allow toggle-next to target distant div
add new hl-hover-gray css class

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -823,6 +823,10 @@ the form-control fails to do that so we do the border ourselves */
     background-color: rgba(41, 174, 185, 0.5);
 }
 
+.hl-hover-gray:hover {
+    background-color: $verylightgray;
+}
+
 #commentsCreateArea {
     border-radius: 5px;
     margin: 10px 0;
