make action buttons in view mode look more like buttons on hover

--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -51,40 +51,52 @@
 
   <div>
     {% if not (Entity.isReadOnly or Entity.entityData.locked) %}
-      <a class='elab-tooltip mr-1' href='#' data-action='edit'>
+    <div class='hl-hover-gray d-inline p-2 rounded'>
+      <a class='elab-tooltip' href='#' data-action='edit'>
         <span>{{ 'Edit'|trans }}</span>
-        <i title='{{ 'Edit'|trans }}' class='fas fa-pencil-alt fa-2x mr-2' style='color:#29AEB9'></i>
+        <i title='{{ 'Edit'|trans }}' class='fas fa-pencil-alt fa-2x' style='color:#29AEB9'></i>
       </a>
+    </div>
     {% endif %}
 
     {% if not App.Session.has('is_anon') %}
-      <a class='elab-tooltip mr-1' href='#' data-action='duplicate-entity'>
-        <span>{{ 'Duplicate'|trans }}</span>
-        <i title='{{ 'Duplicate'|trans }}' class='far fa-copy fa-2x mr-2'></i>
-      </a>
+      <div class='hl-hover-gray d-inline p-2 rounded'>
+        <a class='elab-tooltip' href='#' data-action='duplicate-entity'>
+          <span>{{ 'Duplicate'|trans }}</span>
+          <i title='{{ 'Duplicate'|trans }}' class='far fa-copy fa-2x'></i>
+        </a>
+      </div>
     {% endif %}
 
-    <a class='elab-tooltip mr-1' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=pdf'>
-      <span>{{ 'Make a PDF'|trans }}</span>
-      <i title='{{ 'Make a PDF'|trans }}' class='fas fa-file-pdf fa-2x mr-2'></i>
-    </a>
+    <div class='hl-hover-gray d-inline p-2 rounded'>
+      <a class='elab-tooltip' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=pdf'>
+        <span>{{ 'Make a PDF'|trans }}</span>
+        <i title='{{ 'Make a PDF'|trans }}' class='fas fa-file-pdf fa-2x'></i>
+      </a>
+    </div>
 
-    <a class='elab-tooltip mr-1' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=zip'>
-      <span>{{ 'Make a ZIP'|trans }}</span>
-      <i title='{{ 'Make a ZIP'|trans }}' class='fas fa-file-archive fa-2x mr-2'></i>
-    </a>
+    <div class='hl-hover-gray d-inline p-2 rounded'>
+      <a class='elab-tooltip' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=zip'>
+        <span>{{ 'Make a ZIP'|trans }}</span>
+        <i title='{{ 'Make a ZIP'|trans }}' class='fas fa-file-archive fa-2x'></i>
+      </a>
+    </div>
 
-    <a class='elab-tooltip mr-1' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=eln'>
-      <span>{{ 'Make an ELN'|trans }}</span>
-      <i title='{{ 'Make an ELN'|trans }}' class='fas fa-box-archive fa-2x mr-2'></i>
-    </a>
+    <div class='hl-hover-gray d-inline p-2 rounded'>
+      <a class='elab-tooltip' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=eln'>
+        <span>{{ 'Make an ELN'|trans }}</span>
+        <i title='{{ 'Make an ELN'|trans }}' class='fas fa-box-archive fa-2x'></i>
+      </a>
+    </div>
 
     {% if Entity.type == 'items' %}
       {% if Entity.entityData.bookable %}
-        <a class='elab-tooltip mr-1' href='team.php?item={{ Entity.id }}'>
-          <span>{{ 'Book item'|trans }}</span>
-          <i title='{{ 'Book item'|trans }}' class='fas fa-calendar-plus fa-2x mr-2'></i>
-        </a>
+        <div class='hl-hover-gray d-inline p-2 rounded'>
+          <a class='elab-tooltip' href='team.php?item={{ Entity.id }}'>
+            <span>{{ 'Book item'|trans }}</span>
+            <i title='{{ 'Book item'|trans }}' class='fas fa-calendar-plus fa-2x'></i>
+          </a>
+        </div>
       {% endif %}
     {% endif %}
 
@@ -95,33 +107,41 @@
         {% set lockIcon = 'fa-lock' %}
         {% set alt = Entity.entityData.lockedwhen %}
     {% endif %}
-    <a class='elab-tooltip mr-1' href='#' data-action='lock-entity'>
-        <span>{{ alt }}</span>
-        <i title='{{ alt }}' class='fas {{lockIcon}} fa-2x mr-2'></i>
-    </a>
+    <div class='hl-hover-gray d-inline p-2 rounded'>
+      <a class='elab-tooltip' href='#' data-action='lock-entity'>
+          <span>{{ alt }}</span>
+          <i title='{{ alt }}' class='fas {{lockIcon}} fa-2x'></i>
+      </a>
+    </div>
 
     {% if not App.Session.has('is_anon') and App.Config.configArr.anon_users %}
-      <a class='elab-tooltip mr-1' href='#' data-action='share'>
-        <span>{{ 'Share'|trans }}</span>
-        <i title='{{ 'Share'|trans }}' class='fas fa-share-alt fa-2x mr-2'></i>
-      </a>
-      <input type='text' class='form-control' aria-label='{{ 'Share'|trans }}' id='shareLinkInput' value='' hidden />
+      <div class='hl-hover-gray d-inline p-2 rounded'>
+        <a class='elab-tooltip' href='#' data-action='share'>
+          <span>{{ 'Share'|trans }}</span>
+          <i title='{{ 'Share'|trans }}' class='fas fa-share-alt fa-2x'></i>
+        </a>
+        <input type='text' class='form-control' aria-label='{{ 'Share'|trans }}' id='shareLinkInput' value='' hidden />
+      </div>
     {% endif %}
 
     <!-- show timestamp button -->
     {% if Entity.type == 'experiments' and not App.Session.has('is_anon') %}
-      <a href='#' class='elab-tooltip mr-1' data-action='toggle-modal' data-target='timestampModal'>
-        <span>{{ 'Timestamp Experiment'|trans }}</span>
-        <i title='{{ 'Timestamp Experiment'|trans }}' class='far fa-calendar-check fa-2x mr-2'></i>
-      </a>
+      <div class='hl-hover-gray d-inline p-2 rounded'>
+        <a href='#' class='elab-tooltip' data-action='toggle-modal' data-target='timestampModal'>
+          <span>{{ 'Timestamp Experiment'|trans }}</span>
+          <i title='{{ 'Timestamp Experiment'|trans }}' class='far fa-calendar-check fa-2x'></i>
+        </a>
+      </div>
     {% endif %}
 
     <!-- BLOXBERG BUTTON -->
     {% if not Entity.isReadOnly and App.Config.configArr.blox_enabled %}
-      <a href='#' class='elab-tooltip mr-1' data-action='bloxberg'>
-        <span>{{ 'Add to blockchain'|trans }}</span>
-        <i title='{{ 'Add to blockchain'|trans }}' class='fas fa-cubes fa-2x mr-2'></i>
-      </a>
+      <div class='hl-hover-gray d-inline p-2 rounded'>
+        <a href='#' class='elab-tooltip' data-action='bloxberg'>
+          <span>{{ 'Add to blockchain'|trans }}</span>
+          <i title='{{ 'Add to blockchain'|trans }}' class='fas fa-cubes fa-2x'></i>
+        </a>
+      </div>
     {% endif %}
   </div>
 
@@ -143,7 +163,7 @@
     <div class='col-6'>
       <p>
         <i aria-hidden='true' class='fas fa-clipboard-{{ Entity.type == 'experiments' ? 'check' : 'list' }}'></i>
-        <span class='malleableCategory'>{{ Entity.entityData.category }}</span>
+        <span class='malleableCategory hl-hover-gray rounded p-1'>{{ Entity.entityData.category }}</span>
           {% if Entity.entityData.rating > 0 %}
             {{ Entity.entityData.rating|stars|raw }}
           {% endif %}
