--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -3,12 +3,6 @@
     <section class='col-md-6'>
       <h4 data-action='toggle-next' data-toggle-next-n='2' data-icon='stepsDivIcon' class='d-inline'><i id='stepsDivIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-check-square'></i> {{ 'Steps'|trans }}</h4>
       <!-- ADD STEP -->
-      <div class='input-group mt-2'>
-          <div class='input-group-prepend'>
-            <span class='input-group-text'>{{ 'Add a step'|trans }}</span>
-          </div>
-          <input aria-label='{{ 'Add a step'|trans }}' type='text' size='60' class='form-control stepinput' data-id='{{ Entity.id }}' />
-      </div>
       <div id='stepsDiv' class='mt-2' data-save-hidden='stepsDiv'>
         <div class='sortable' id='steps_div_{{ Entity.id }}' data-axis='y' data-table='{{ Entity.type ? Entity.type : 'items_types'}}_steps'>
           {% for step in Entity.entityData.steps %}
@@ -79,6 +73,13 @@
             </div>
           {% endfor %}
         </div>
+      </div>
+      <!-- Add step input -->
+      <div class='input-group mt-2'>
+          <div class='input-group-prepend'>
+            <span class='input-group-text'>{{ 'Add a step'|trans }}</span>
+          </div>
+          <input aria-label='{{ 'Add a step'|trans }}' type='text' size='60' class='form-control stepinput' data-id='{{ Entity.id }}' />
       </div>
     </section>
     <!-- empty half-column because steps have no counterpart -->
