add button to copy step body into main text. fix #2407

--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -67,6 +67,7 @@
                     </div>
                     {% endif %}
                     </div>
+                    <div data-action='import-step-body' data-stepid='{{ step.id }}'><i class='fas fa-file-import'></i> {{ 'Copy step to cursor position'|trans }}</div>
                   </div>
                 {% endif %}
               </div>
