--- a/src/templates/json-editor.html
+++ b/src/templates/json-editor.html
@@ -25,7 +25,7 @@
     {% endif %}
     {% if mode == 'edit-template' %}
       <div class='mt-4 text-center'>
-        <button type='button' id='templateJsonSave' data-action='json-save-metadata-from-id' data-id='{{ templateData.id }}' class='btn btn-primary'>{{ 'Save as metadata'|trans }}</button>
+        <button type='button' id='templateJsonSave' data-action='json-save-metadata-from-id' data-id='{{ templateData.id|default(Entity.id) }}' class='btn btn-primary'>{{ 'Save as metadata'|trans }}</button>
         <button type='button' data-action='json-clear' class='btn btn-danger float-right'>{{ 'Clear'|trans }}</button>
       </div>
     {% endif %}
