--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -78,36 +78,39 @@
 
 <!-- TAB 1 SCHEDULER -->
 <div data-tabcontent='1' hidden>
-    {% if itemsArr|length == 0 %}
-        {{ 'No bookable items.'|trans|msg('warning', false) }}
-    {% else %}
-        <div class='row'>
-          <div class='col-md-2'>
-            <div class='dropdown'>
-              <button class='btn btn-default dropdown-toggle' type='button' id='dropdownMenu1' data-toggle='dropdown' aria-haspopup='true' aria-expanded='true'>
-                {% if allItems %}
-                  {{ 'Select an equipment'|trans }}
-                {% else %}
-                  <span style='color:#{{ itemData.color }}'>{{ itemData.category }}</span> - {{ itemData.title }}
-                {% endif %}
-                <span class='caret'></span>
-              </button>
-              <div class='dropdown-menu' aria-labelledby='dropdownMenu1'>
-                <a href='team.php?item=all' data-value='{{ 'Show all'|trans }}' class='dropdown-item'>
-                  {{ 'Show all'|trans }}
-                </a>
-                {% for item in itemsArr %}
-                  <a href='team.php?item={{ item.id }}' data-value='{{ item.title }}' class='dropdown-item'>
-                    <span style='color:#{{ item.color }} '>{{ item.category }}</span> - {{ item.title }}
-                  </a>
-                {% endfor %}
-              </div>
-            </div>
-          </div>
-        </div>
-        <br>
-    {% endif %}
-    <div id='scheduler' data-render={{ itemsArr|length > 0 ? 'true' : 'false' }}></div>
+  {% if itemsArr|length == 0 %}
+    {{ 'No bookable items.'|trans|msg('warning', false) }}
+  {% else %}
+  <div class='row mb-3'>
+    <div class='col-md-3'>
+      <!-- CATEGORY -->
+      {# Note: option color doesn't show up in firefox #}
+      <form>
+        <select name='cat' class='autosubmit mr-1 form-control' aria-label='Filter category'>
+          <option value=''>{{ 'Filter by type'|trans }}</option>
+          {% for category in bookableCategoryArr %}
+            <option style='color:#{{ category.color }}' value='{{ category.category_id }}'{{ App.Request.query.get('cat') == category.category_id ? ' selected'}}>
+          {{ category.category|raw }}</option>
+          {% endfor %}
+        </select>
+      </form>
+    </div>
+
+    <div class='col-md-3'>
+      <!-- ITEM LIST -->
+      <form>
+        <select name='item' class='autosubmit mr-1 form-control' aria-label='Filter item'>
+          <option value=''>{{ 'Select an equipment'|trans }}</option>
+          {% for item in itemsArr %}
+            <option style='color:#{{ item.color }}' value='{{ item.id }}'{{ App.Request.query.get('item') == item.id ? ' selected'}}>
+            {{ item.category }} - {{ item.title }}</option>
+          {% endfor %}
+        </select>
+      </form>
+    </div>
+  </div>
+  {% endif %}
+  <div id='scheduler' data-render={{ itemsArr|length > 0 ? 'true' : 'false' }}></div>
 </div>
 
 <!-- TAB 2 INFO -->
