--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -1,4 +1,12 @@
 {% extends 'base.html' %}
+{# tinymce or markdown? #}
+{% set editor = 'tiny' %}
+{% if Entity.Users.userData.use_markdown or App.Request.query.get('editor') == 'md' or Entity.entityData.content_type == '2' %}
+  {% set editor = 'md' %}
+{% endif %}
+{% if App.Request.query.get('editor') == 'tiny' %}
+  {% set editor = 'tiny' %}
+{% endif %}
 
 {% block body %}
 <ul class='tabbed-menu'>
