--- a/src/templates/show.html
+++ b/src/templates/show.html
@@ -159,21 +159,21 @@
           {% include 'show-item.html' %}
         {% endfor %}
         </div>
-      {% elseif App.Users.userData.display_mode == 'tb' %}
+      {% elseif App.Users.userData.display_mode == 'tb' -%}
       <div id='itemList'>
         <table class='item-table' aria-describedby='pageTitle'>
           <tr>
             <th>
-              {{ 'Date'|trans }} <a href='#' data-action='reorder-entities' data-orderby='date'><i class='fas fa-sort'></i></a>
+              {{ 'Date'|trans }} <a href='#' data-action='reorder-entities' data-orderby='date'><i class='fas {{ orderIcon("date") }}'></i></a>
             </th>
             <th class='title-item-table'>
-              {{ 'Title'|trans }} <a href='#' data-action='reorder-entities' data-orderby='title'><i class='fas fa-sort'></i></a>
+              {{ 'Title'|trans }} <a href='#' data-action='reorder-entities' data-orderby='title'><i class='fas {{ orderIcon("title") }}'></i></a>
             </th>
             <th class='step-item-table'>
               {{ 'Next step'|trans }}
             </th>
             <th class='category-item-table'>
-              {{ 'Category'|trans }} <a href='#' data-action='reorder-entities' data-orderby='cat'><i class='fas fa-sort'></i></a>
+              {{ 'Category'|trans }} <a href='#' data-action='reorder-entities' data-orderby='cat'><i class='fas {{ orderIcon("cat") }}'></i></a>
             </th>
             <th class='tags-item-table'>
               {{ 'Tags'|trans }}
@@ -182,10 +182,10 @@
               {{ 'Actions'|trans }}
             </th>
             <th class='actions-item-rating'>
-              {{ 'Rating'|trans }} <a href='#' data-action='reorder-entities' data-orderby='rating'><i class='fas fa-sort'></i></a>
+              {{ 'Rating'|trans }} <a href='#' data-action='reorder-entities' data-orderby='rating'><i class='fas {{ orderIcon("rating") }}'></i></a>
             </th>
             <th class='actions-item-owner'>
-              {{ 'Owner'|trans }} <a href='#' data-action='reorder-entities' data-orderby='user'><i class='fas fa-sort'></i></a>
+              {{ 'Owner'|trans }} <a href='#' data-action='reorder-entities' data-orderby='user'><i class='fas {{ orderIcon("user") }}'></i></a>
             </th>
           </tr>
         {% for item in itemsArr|slice(0, DisplayParams.limit) %}
