refactor to class

--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -123,11 +123,14 @@
 <section class='box'>
     <h5><i class='fas fa-users'></i> {{ 'Members'|trans }}</h5>
     <table id='teamtable' class='table' aria-describedby='pageTitle'>
+      <thead>
         <tr>
             <th>{{ 'Name'|trans }}</th>
             <th>{{ 'Email'|trans }}</th>
             <th>ORCID</th>
         </tr>
+      </thead>
+      <tbody>
         <!-- archived users are hidden on this page -->
         {% for user in App.Users.readAllFromTeam()|filter(u => u.archived == 0) %}
         <tr>
@@ -145,6 +148,7 @@
           <td>{{ user.orcid }}</td>
         </tr>
         {% endfor %}
+      </tbody>
     </table>
 </section>
 
