--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -122,7 +122,7 @@
 
 <section class='box'>
     <h5><i class='fas fa-users'></i> {{ 'Members'|trans }}</h5>
-    <table id='teamtable' class='table' aria-describedby='pageTitle'>
+    <table id='teamtable' class='table' aria-describedby='pageTitle' data-table-sort='true'>
       <thead>
         <tr>
             <th>{{ 'Name'|trans }}</th>
