--- a/src/templates/show-item.html
+++ b/src/templates/show-item.html
@@ -23,7 +23,7 @@
     {% endif %}
 
     <p class='title'>
-      <!-- lock icon -->
+      {# lock icon #}
       {% if item.locked %}
         <i class='fas fa-lock' style='color:#29AEB9'></i>
       {% endif %}
@@ -39,21 +39,21 @@
     {% endif %}
 
     <p class='item-info'>
-      <!-- checkbox -->
+      {# checkbox #}
       <input autocomplete='off' type='checkbox' data-action='checkbox-entity' data-id='{{ item.id }}' data-randomid='{{ randomId }}' data-type='{{ Entity.type }}' aria-label='Select' style='width:15px;vertical-align:0.5px;' />
-      <!-- edit icon -->
+      {# edit icon #}
       {% if not item.locked and (item.userid == App.Users.userData.userid or Entity.type == 'items' or App.Session.get('is_admin')) %}
         <a href='{{ Entity.page }}.php?mode=edit&id={{ item.id }}' title='{{ 'Edit'|trans }}'><i class='fas fa-pencil-alt link-like'></i></a>
       {% endif %}
-      <!-- toggle body -->
+      {# toggle body #}
       <span data-type='{{ Entity.type }}' data-id='{{ item.id }}' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
         <i class='fas fa-plus-circle'></i>
       </span>
-      <!-- category -->
+      {# category #}
       <span class='item-category'><a style='color:#{{ item.color }}' href='?cat={{ item.category_id }}'>{{ item.category }}</a></span>
-      <!-- date -->
+      {# date #}
       <span class='item-date'><i class='far fa-calendar-alt mr-1'></i>{{ item.date|date('Y-m-d') }}</span>
-      <!-- timestamp icon -->
+      {# timestamp icon #}
       {% if item.timestamped %}
         <i class='far fa-calendar-check'></i>
       {% endif %}
@@ -82,8 +82,8 @@
       {% endif %}
     </p>
 
-    <!-- container to hold the body of the entity if it is toggled with the +/- icon -->
-    <!-- a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well -->
+    {# container to hold the body of the entity if it is toggled with the +/- icon #}
+    {# a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well #}
     <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'></div>
 
   </section>
